# micropython-ft6x36

./: .gitignore  .pre-commit-config.yaml  README.md  package.json  pyproject.toml
.github/workflows/: build_packages.yml  publish_pypi.yml
examples/: rotation.py  simple.py
examples/simple_test/: simple_test.py
ft6x36/: ft6x36.py  manifest.py
mip/0.2.0/: index.json
mip/0.2.0/package/py/: 0.2.0.json
mip/master/: index.json
mip/master/file/27/: 27a1f04b
mip/master/file/2f/: 2fcb08de
mip/master/package/6/: latest.json
tools/: build.py  ci.sh
