# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Liz Clark for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "micropython-ft6x36"
description = "Driver for the FT6x36"
version = "0.1.0"
readme = "README.md"
authors = [
    {name = "lbuque", email = "1102390310@qq.com"}
]
urls = {Homepage = "https://github.com/lbuque/micropython-ft6x36"}
keywords = [
    "micropython",
    "ft6x36",
    "FT6236",
    "FT6336",
    "FT6436L",
    "FT6436",
    "FocalTech Systems"
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["ft6x36"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
