# SPDX-FileCopyrightText: 2022 lbuque
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "micropython-ft6x36"
description = "FocalTech FT6X36 touch panel driver."
version = "0.2.0"
readme = "README.md"
authors = [
    {name = "lbuque", email = "1102390310@qq.com"}
]
urls = {Homepage = "https://github.com/lbuque/micropython-ft6x36"}
keywords = [
    "micropython",
    "ft6x36",
    "FT6236",
    "FT6336",
    "FT6436L",
    "FT6436",
    "FocalTech Systems"
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["ft6x36"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
select = [
  "ASYNC",  # flake8-comprehensions
  "C4",     # flake8-comprehensions
  "C90",    # McCabe cyclomatic complexity
  "DTZ",    # flake8-datetimez
  "E",      # pycodestyle
  "EXE",    # flake8-executable
  "F",      # Pyflakes
  "G",      # flake8-logging-format
  "ICN",    # flake8-import-conventions
  "INT",    # flake8-gettext
  "ISC",    # flake8-implicit-str-concat
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # Pylint
  "PYI",    # flake8-pyi
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules
  "T10",    # flake8-debugger
  "TCH",    # flake8-type-checking
  "W",      # pycodestyle
  "YTT",    # flake8-2020
  # "A",    # flake8-builtins
  # "ANN",  # flake8-annotations
  # "ARG",  # flake8-unused-arguments
  # "B",    # flake8-bugbear
  # "BLE",  # flake8-blind-except
  # "COM",  # flake8-commas
  # "D",    # pydocstyle
  # "DJ",   # flake8-django
  # "EM",   # flake8-errmsg
  # "ERA",  # eradicate
  # "FBT",  # flake8-boolean-trap
  # "I",    # isort
  # "INP",  # flake8-no-pep420
  # "N",    # pep8-naming
  # "NPY",  # NumPy-specific rules
  # "PD",   # pandas-vet
  # "PT",   # flake8-pytest-style
  # "PTH",  # flake8-use-pathlib
  # "Q",    # flake8-quotes
  # "RET",  # flake8-return
  # "S",    # flake8-bandit
  # "SIM",  # flake8-simplify
  # "SLF",  # flake8-self
  # "T20",  # flake8-print
  # "TID",  # flake8-tidy-imports
  # "TRY",  # tryceratops
  # "UP",   # pyupgrade
]
ignore = [
  "E722",
  "E741",  # 'l' is currently widely used
  "F401",
  "F403",
  "F405",
  "E501",  # line length, recommended to disable
  "ISC001",
  "ISC003",  # micropython does not support implicit concatenation of f-strings
  "PIE810",  # micropython does not support passing tuples to .startswith or .endswith
  "PLC1901",
  "PLR1701",
  "PLR1714",
  "PLR5501",
  "PLW0602",
  "PLW0603",
  "PLW2901",
  "RUF012",
  "RUF100",
  "W191",  # tab-indent, redundant when using formatter
]
line-length = 99
target-version = "py37"

[tool.ruff.format]